# NHLplayground

./: README.md  pyproject.toml
config/: allowed_models.yaml  scrape_endpoints.yaml
scripts/: run_scraping.py  run_xg_preprocessing.py
src/nhl_playground/: run_scraping.py  run_xg_preprocessing.py
src/nhl_playground/data/: dataclasses.py  dataloaders.py  enrichment.py  preprocessing.py  utils.py
src/nhl_playground/models/: base.py  model_factories.py  xg_models.py
src/nhl_playground/scrape/: __init__.py  endpoints.yaml  scrape.py  scrape_utils.py  scraper.py  scrapers.py  utils.py
src/scrape/: endpoints.yaml  scrape.py  scraper.py  test.py  utils.py
