[tool.poetry]
name = "nhl_playground"
version = "0.1.0"
description = "Personal project revolving around NHL API."
authors = ["Jakub Renc <183517435+RncJkb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
